fixing border misalignment

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ button:focus {
 }
 
 .board {
-  border: 3px solid var(--board-border-color);
+  // border: 3px solid var(--board-border-color);
   display: inline-grid;
   grid-template-columns: var(--board-grid-config);
   grid-template-rows: var(--board-grid-config);
@@ -103,9 +103,17 @@ button:focus {
   -ms-user-select: none;
 }
 
+div[data-col="0"] {
+  border-left: 4px solid var(--board-border-color);
+}
+
 div[data-col="3"],
 div[data-col="6"] {
   border-left: 3px solid var(--board-border-color);
+}
+
+div[data-row="0"] {
+  border-top: 4px solid var(--board-border-color);
 }
 
 div[data-row="3"],
@@ -113,9 +121,16 @@ div[data-row="6"] {
   border-top: 3px solid var(--board-border-color);
 }
 
+div[data-row="8"] {
+  border-bottom: 4px solid var(--board-border-color);
+}
+
+div[data-col="8"] {
+  border-right: 4px solid var(--board-border-color);
+}
+
 .cell-selected {
   background-color: var(--bg-color-selected);
-  // border: 3px solid blue;
 }
 
 .cell__num {
